# DocGen

./: .env.example  .gitignore  .pre-commit-hooks.yaml  LICENSE  PROJECT_EXPLANATION.md  README.md  TESTING_GUIDE.md  pyproject.toml  render.yaml  requirements.txt  setup.py  vercel.json
.github/workflows/: ci.yml
demo/: 01_clean_slate.py  02_mixed_state.py  03_confidence_stress.py  04_edge_cases.py  README.md  calculator.py  user_service.py  utils.py
demo/01_no_docstrings/: calculator.py  data_processor.py  inventory_manager.py
demo/02_partial_docstrings/: file_handler.py  user_manager.py
demo/03_style_mismatch/: numpy_style_module.py  rest_style_module.py
demo/04_complex_patterns/: algorithms.py  async_pipeline.py  design_patterns.py
demo/05_edge_cases/: dataclasses_demo.py  decorators_demo.py  generators_demo.py
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  GROQ_DEPLOYMENT_VERIFICATION.md  NGROK_OLLAMA_REPORT.md  PROJECT_EXPLANATION.md  SECURITY.md  TESTING.md
project/backend/: README.md
project/frontend/: .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
project/frontend/src/: App.tsx  apiClient.ts  index.css
project/frontend/src/components/: AnalyzePhase.tsx  ComparisonViewer.tsx  CoverageReport.tsx  FunctionNavigator.tsx  GeneratePhase.tsx  ImprovementBanner.tsx  PhaseHeader.tsx  ReviewPhase.tsx  UploadPhase.tsx  UploadZone.tsx  WorkflowPage.tsx
project/frontend/src/store/: sessionStore.ts
src/autodocstring/: __init__.py
src/autodocstring/api/: __init__.py  app.py  schemas.py
src/autodocstring/confidence/: __init__.py  scorer.py
src/autodocstring/config/: __init__.py  loader.py
src/autodocstring/core/: __init__.py  decision_model.py
src/autodocstring/generator/: __init__.py  engine.py  gemini_provider.py  groq_provider.py  ollama_provider.py
src/autodocstring/generator/templates/: __init__.py  base.py  (+5 more)
src/autodocstring/integrations/: __init__.py  precommit.py
src/autodocstring/models/: __init__.py  metadata.py
src/autodocstring/parser/: __init__.py  ast_parser.py  extractors.py
src/autodocstring/safety/: __init__.py  applier.py  git_diff.py  transaction.py
src/autodocstring/session/: __init__.py  session_manager.py
src/autodocstring/utils/: __init__.py  files.py
src/autodocstring/validation/: __init__.py  coverage.py  rules.py  style_checker.py  validator.py
tests/: conftest.py  test_api.py  test_confidence.py  test_generator.py  test_parser.py  test_safety.py  test_validation.py
tests/sample_project/: README.md  calc.py  math_utils.py  string_utils.py  syntax_error.py
tests/sample_project/api/: __init__.py  handlers.py
tests/sample_project/async_ops/: __init__.py  pipeline.py
tests/sample_project/core/: __init__.py  base.py  engine.py
tests/sample_project/data/: __init__.py  models.py
tests/sample_project/decorators/: __init__.py  core.py
tests/sample_project/hard_cases/: mismatch_numpy.py  partial_google.py  rest_style.py  syntax_error.py  tricky_strings.py
tests/sample_project/legacy/: __init__.py  compat.py
tests/sample_project/utils/: __init__.py  transforms.py
