[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodocstring"
version = "2.0.0"
description = "Production-ready Python documentation assistant – deterministic + LLM-optional"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Megesh", email = "megesh07@example.com"}
]
keywords = ["docstring", "documentation", "ast", "python", "code-quality", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pydocstyle>=6.0.0",
    "toml>=0.10.2",
    "jinja2>=3.0.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    # REST API backend
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
llm = [
    "httpx>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/Megesh07/DocGen"
Repository = "https://github.com/Megesh07/DocGen"
Issues = "https://github.com/Megesh07/DocGen/issues"



[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/autodocstring --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.autodocstring]
# ── Core behaviour ─────────────────────────────────────────────────────────
style = "google"                        # google | numpy | rest
confidence_threshold = 0.60            # skip generation below this score
mode = "review"                        # report | review | enforce

# ── LLM provider (optional) ─────────────────────────────────────────────────
llm_provider = "none"                  # none | local
llm_base_url = "http://localhost:11434"
llm_model = "mistral"

# ── File filtering ──────────────────────────────────────────────────────────
include = ["**/*.py"]
ignore_patterns = [
    "tests/**",
    "**/__pycache__/**",
    "**/venv/**",
    "**/.venv/**",
]
exclude = [
    "tests/**",
    "**/__pycache__/**",
    "**/venv/**",
    "**/.venv/**",
]

# ── Legacy / validation options ─────────────────────────────────────────────
coverage_threshold = 80.0
output_format = "terminal"
autofix = true
validate = true
